--- a/Monitor.html
+++ b/Monitor.html
@@ -4,7 +4,9 @@
 <meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/css.css" />
 	<link rel="stylesheet" type="text/css" href="css/reset.css" />
+
 <title>Monitor Page</title> 
+
 </head>
 
 
@@ -15,6 +17,16 @@
 		</div>
 	</form>
 </div>
+
+<section class=" Botoes_pagina0">
+    <div class= "Botoes__pagina0">
+			<a onclick = cad_new_temp()>
+		<img name="pasta_btn" src="imagens/blue/pasta_btn.png" ALT=""></a>
+			<a onclick = getContent()>
+		<img name="temp_btn" src="imagens/blue/temp_btn.png" ALT=""></a>
+	</div>
+</section>
+
 <body>
 <div>
 <form action="/mqtt" method = "get">
