--- a/mqtt.html
+++ b/mqtt.html
@@ -6,6 +6,9 @@
 <link rel="stylesheet" type="text/css" href="css/css.css" />
 <link rel="stylesheet" type="text/css" href="css/reset.css" />
 <link rel="preconnect" href="https://fonts.googleapis.com" />
+<script>
+
+</script>
 </head>
 	
 <body onload="startTime()">
@@ -90,7 +93,7 @@
 
 <br>
 <div class = img_kit>
-<img name="img_kit" src='imagens/Kit1.png' ALT="">
+<img id="img_kit" src='imagens/Kit1.png' ALT="">
 </div>
 </body>
 
