--- a/Monitor.html
+++ b/Monitor.html
@@ -21,9 +21,9 @@
 <section class=" Botoes_pagina0">
     <div class= "Botoes__pagina0">
 			<a onclick = cad_new_temp()>
-		<img name="pasta_btn" src="imagens/blue/pasta_btn.png" ALT=""></a>
+		<img id="pasta_btn" src="imagens/blue/pasta_btn.png" ALT=""></a>
 			<a onclick = getContent()>
-		<img name="temp_btn" src="imagens/blue/temp_btn.png" ALT=""></a>
+		<img  id="temp_btn" src="imagens/blue/temp_btn.png" ALT=""></a>
 	</div>
 </section>
 
