--- a/Grafico.html
+++ b/Grafico.html
@@ -19,6 +19,8 @@ google.charts.setOnLoadCallback(draw_table);
 <body>
    
 <div class ="main">
+<section class="Botoes">
+    <div class="container">
     <div class="botao_home">
 	    <form name="home" action="/" method="get">
             <div class="home_btn">
@@ -26,10 +28,12 @@ google.charts.setOnLoadCallback(draw_table);
             </div>
 	    </form>
     </div>
-</div>  
+</div>
+<img id = "fio" src = "imagens/blue/fio azul.png" >
+</section>
 
-<section class="botãochart">
-     <div class="botão_chart">
+<section class="Botoes_pagina0">
+     <div class="Botoes__pagina0">
         <form name="apaga" action="#" method="get">
             <input type="image" src = "/imagens/blue/graph_btn.png" onClick="Dia()">
             <label>Dia</label>
@@ -64,6 +68,6 @@ google.charts.setOnLoadCallback(draw_table);
             <tfoot> </tfoot>
      </table>   
     </div>
-
+</div>  
 </body>
 </html>
