--- a/mqtt.html
+++ b/mqtt.html
@@ -15,7 +15,6 @@
 
 <section class="Botoes">
 <div class="container">
-        
 <div class="botao_home">
 	<form name="home" action="/" method="get">
 		<div class="home_btn">
@@ -30,14 +29,17 @@
 			</form>
 		</div>
 	</div>
+<img id = "fio" src = "imagens/blue/fio azul.png" >
 </section>
 
 <section class=" Botoes_pagina0">
     <div class= "Botoes__pagina0">
 			<a onclick = mqtt_show()>
 		<img name="raio_btn" src="imagens/blue/raio_btn.png" ALT=""></a>
+		<label> Temperatura Atual </label>
 			<a onclick = Relogio()>
 		<img name="lamp_btn" src="imagens/blue/lamp_btn.png" ALT=""></a>
+		<label> Set Time Light </label>
 	</div>
 </section>
 
