--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <div class="container">
         <div class="botao_home">
 		  <img id = "logo" src = "imagens/blue/logo.png" >
-
 		  <img id="logo_toi" src = "imagens/blue/logo_toi.png" >
         </div>
 		<div class="home_btn">
@@ -27,21 +26,18 @@
 <section class=" Botoes_pagina0">
     <div class= "Botoes__pagina0">
 		<div class=" w_box">
-		<a href="mqtt.html">
-		<img NAME="bar_04" src="imagens/blue/raio_btn.png" ALT=""></a>
-		<img id="w_b" src="imagens/blue/box_w.png"  ALT="">
+		<a  href="mqtt.html">
+		<img src="imagens/blue/raio_btn.png"  ALT=""></a>
 		<label>Energy</label>
 		</div>
 		<div class=" w_box">
 	    <a  href="Grafico.html">
-		<img NAME="bar_04" src="imagens/blue/graph_btn.png"  ALT=""></a>
-		<img id="w_b" src="imagens/blue/box_w.png"  ALT="">
+		<img src="imagens/blue/graph_btn.png"  ALT=""></a>
 		<label>Graphics</label>
 		</div>
 		<div class=" w_box">
 	    <a href="Monitor.html">
 	    <img NAME="bar_04" src="imagens/blue/temp_btn.png"  ALT=""></a>
-		<img id="w_b" src="imagens/blue/box_w.png"  ALT="">
 		<label>Temperature</label>
   		 </div>
     </div>
