--- a/cad_user.html
+++ b/cad_user.html
@@ -37,7 +37,7 @@
 		<form action="/user" method = "get">
 		<label>Consultar</label><br>
 		<input type="text" name = "list" size="20" > 	<br>
-		<button type="submit" siz="20">Listar</button>
+		<button type="submit" >Listar</button>
 		</form>	
 	
 	<form action="/user" method = "patch">
@@ -51,7 +51,7 @@
 
 	<form action="/user" method = "delete">
 		<br><label>Deletar</label><br>
-			<input type="text" placeholder="Id"  name = "id" size="20" > 
+			<input type="text" placeholder="Id"  id ="id" name = "id" size="20" > 
 			<button type="submit">Deletar</button>
 	</form>
 
