--- a/autentica.html
+++ b/autentica.html
@@ -24,10 +24,10 @@
 <form action="/login" method = "post">
 	<p></p><label>Login</label></p>	<br>
 
-	<img name="user" src="imagens/user.png" ALT=""></a><br>	<br>
+	<img name="user" src="imagens/blue/user.png" ALT=""></a><br>	<br>
 	
-	<input type="nome"  placeholder="Usuario"	name = "nome" size="12" ><br><br>
-	<input type="password"  placeholder = "Senha" name = "senha0" size="12" > <br>  <br>
+	<input type="nome"  	placeholder="Usuario"	name = "nome" 	size="12" ><br><br>
+	<input type="password"  placeholder = "Senha" 	name = "senha0" size="12" > <br>  <br>
     <button type="submit"> Login </button>  <br> <br>
 </form>
 
