--- a/Monitor.html
+++ b/Monitor.html
@@ -23,20 +23,19 @@
 <section class=" Botoes_pagina0">
 	
     <div class= "Botoes__pagina0">
-		<a onclick = getContent()>
-		<img  id="temp_btn" src="imagens/blue/temp_btn.png" ALT=""></a>
-		<label> Temperatura Atual</label>
-		<a onclick = list_temp()>
-		<img  id="temp_btn" src="imagens/blue/temp_btn.png" ALT=""></a>
-		<label> Tabela de Temperaturas </label>
+		
 		<a onclick = cad_new_temp()>
 		<img id="pasta_btn" src="imagens/blue/pasta_btn.png" ALT=""></a>
 		<label> Cadastrar Temperatura</label>
+		
+		<label> Temperatura Atual</label>
+		
+		<label> Tabela de Temperaturas </label>
 	</div>
 
 </section>
 
-<body>
+<body onload="list_temp()">
 <div>
 <form action="/mqtt" method = "get">
 	<table>
@@ -144,9 +143,9 @@ function stop(){
 
 setInterval(function()
 	{
-	cad_new_temp();
+	getContent();
 		
-	}, 3600000);
+	}, 10000);
 
 
 async function getContent() {
