--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 <link rel="stylesheet" type="text/css" href="css/css.css" />
 <link rel="stylesheet" type="text/css" href="css/reset.css" />
 <link rel="preconnect" href="https://fonts.googleapis.com" />
+<script src="grafico.js"></script>
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<script>
+google.charts.load('current',{packages:['corechart']});
+google.charts.setOnLoadCallback(Dia);
+google.charts.setOnLoadCallback(draw_table);
+</script>
+
 </head>
 <body> 
 <section class="Botoes">
@@ -43,5 +51,12 @@
   		 </div>
     </div>
 </section>
+	
+<section class="chart">
+	<div class="charts">
+		<div id='graph_dia'></div>
+	</div>
+</section>
+
 </body>
 </html>
