--- a/autentica.html
+++ b/autentica.html
@@ -38,25 +38,14 @@
 <script>
 
 	async function autentica() {
-		//Obtem dados do banco de dados
-			const options = {
-							method: 'POST',
-							mode: 'cors',
-							cache: 'default'
-							}
-			fetch('https://polar-beyond-82520.herokuapp.com/temps')
-			//fetch('http://127.0.0.1:8081/temps')
-			//fetch('http://127.0.0.1:5500/temps')
-			.then(function (response){
-				return response.text()})
-			.then(data=>{
-			const myObj = JSON.parse(data)
-			console.log(data)
-			})
-		}
-
-
-
+		
+		//envio de token via submit para localStorage
+		//const token = document.getElementById('token').value;
+		//localStorage.token = token;
+		localStorage.setItem(token)
+	
+			}
+		
 </script>
 
 </html>
