--- a/autentica.html
+++ b/autentica.html
@@ -26,8 +26,8 @@
 
 	<img name="user" src="imagens/blue/user.png" ALT=""></a><br>	<br>
 	
-	<input type="nome"  	placeholder="Usuario"	name = "nome" 	size="12" ><br><br>
-	<input type="password"  placeholder = "Senha" 	name = "senha0" size="12" > <br>  <br>
+	<input type="nome"  	placeholder="Usuario"	id = "nome" name = "nome" 	size="12" ><br><br>
+	<input type="password"  placeholder = "Senha" 	id =  "senha" name = "senha0" size="12" > <br>  <br>
 	<button type="submit">Login</button>
 	<button type="button"  onClick = "autentica()">LOGIN</button><br>  <br>
 </form>
@@ -39,32 +39,48 @@
 <script>
 
 async function autentica() {
+ // envio de dados para login
+	const dados = {
+		"nome": nome, 
+		"senha": senha
 
-		//envio de token via submit para localStorage
+	}
+	const dados_envio = {method: 'POST',mode: 'cors',cache: 'default',
+		body: JSON.stringify(dados)
+		
+	};
+	
+		fetch('http://127.0.0.1:8081/login',dados_envio)
+		.then(response=>response.json())
+		.then(response =>{
+			console.log(response)
+			//const data = JSON.parse(response)
+			const token =  response.token;
 
-		//let token = document.getElementById('token').value;
-		//token = localStorage.getItem("token") ;
+		//apos recebimento de token do login 
+		//envio de token via fetch para header e localStorage
+
+		window.localStorage.setItem =(response.token);
+		//myHeaders.append("Authorization", "Bearer " + response.token);
+
+		//myHeaders.append("Authorization", "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjYyZWQ4ZmJlY2Y0ODI5M2IwMTc1MTRkZCIsImlhdCI6MTY2MDk1ODg3NH0.oPzUBNWb_3xpisuM5RY7u2uTHl-wH7wSkSJ0aezqqQY");
+		//myHeaders.append("Authorization", "Bearer " + localStorage.getItem(token));
+
 		var myHeaders = new Headers();
-			//myHeaders.append("Authorization", "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjYyZWQ4ZmJlY2Y0ODI5M2IwMTc1MTRkZCIsImlhdCI6MTY2MDk1ODg3NH0.oPzUBNWb_3xpisuM5RY7u2uTHl-wH7wSkSJ0aezqqQY");
-			//myHeaders.append("Authorization", "Bearer " + localStorage.getItem(token));
-			//const token = document.getElementById('token').value;
-			localStorage.setItem =(token);
-			myHeaders.append("Authorization", "Bearer " + token);
-			const options = {
-							method: 'POST',
-							mode: 'cors',
-							cache: 'default',
-							headers: myHeaders,
-							redirect: 'follow'
-							};
 
-			fetch('https://polar-beyond-82520.herokuapp.com/user',options)
-			//fetch('http://127.0.0.1:8081/login',options)
-			.then(response=>response.text())
-			.then(result => console.log(result))
-  			.catch(error => console.log('error', error));
-			
+		const headerss = {
+			method: 'POST',
+			mode: 'cors',
+			cache: 'default',
+			headers: myHeaders,
 			}
+
+		})
+		
+		
+	.catch(error => console.log('error', error));
+		
+		}
 		
 </script>
 
