--- a/cad_user.html
+++ b/cad_user.html
@@ -111,8 +111,8 @@
 		
 					td_id.innerHTML = myObj.people[k]._id
 					td_nome.innerHTML = myObj.people[k].nome
-					td_email.innerHTML = myObj.temps[k].email
-					td_senha.innerHTML = myObj.temps[k].senha
+					td_email.innerHTML = myObj.people[k].email
+					td_senha.innerHTML = myObj.people[k].senha
 				
 					
 				//  console.log(`${key}: ${value}`);
