--- a/autentica.html
+++ b/autentica.html
@@ -9,6 +9,9 @@
 </head>
 <body >
 	
+<section class="Botoes">
+	
+<div class="container">
 <div class="botao_home">
 	<form name="home" action="/" method="get">
 		<div class="home_btn">
@@ -16,6 +19,9 @@
 		</div>
 	</form>
 </div>
+</div>
+<img id = "fio" src = "imagens/blue/fio azul.png" >
+</section>
 
 <div class = autenticacao >
 	
