--- a/cad_user.html
+++ b/cad_user.html
@@ -6,9 +6,13 @@
         <link rel="stylesheet" type="text/css" href="css/reset.css" />
         <script src="user.js"></script>
 
-    <title>Cadastro de usuarios</title> 
-    </head>
-    <body >
+<title>Cadastro de usuarios</title> 
+</head>
+<body >
+	
+<section class="Botoes">
+<div class="container">
+<div class="botao_home">
     <div class="botao_home">
         <form name="home" action="/" method="get">
             <div class="home_btn">
@@ -16,6 +20,10 @@
             </div>
         </form>
     </div>
+</div>
+</div>
+<img id = "fio" src = "imagens/blue/fio azul.png" >
+</section>
 
 <div class = "cad">
 	<div class = "box_cad">
