--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ google.charts.setOnLoadCallback(draw_table);
 </section>
 	
 <section class="chart">
-	<div class="charts">
+	<div class="chart_1">
 		<div id='graph_dia'></div>
 	</div>
 </section>
