--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ google.charts.setOnLoadCallback(draw_table);
 		</div>
 		<div class=" w_box">
 	    <a href="Monitor.html">
-	    <img NAME="bar_04" src="imagens/blue/temp_btn.png"  ALT=""></a>
+	    <img src="imagens/blue/temp_btn.png"  ALT=""></a>
 		<label>Temperature</label>
   		 </div>
     </div>
