--- a/cad_user.html
+++ b/cad_user.html
@@ -36,6 +36,7 @@
 		<input type="checkbox" name = "agreement" id="agreement" >
 		<label for="agreement">Eu li e aceito os <a href= "#" >termos de uso</a></label><br><br>
 		<button type="submit"> Cadastrar </button>
+		<button type="button"  onClick = "autentica()">LOGIN</button><br>  <br>
         </form>
        
 	</form>
