--- a/Monitor.html
+++ b/Monitor.html
@@ -39,20 +39,20 @@
 <div>
 <form action="/mqtt" method = "get">
 	<table>
-	<tr><th colspan = 6>TEMPERATURA SALA </th></tr>
+	<tr><th colspan = 1>TEMPERATURA DA SALA </th><th colspan = 4>TEMPERATURAS </th></tr>
 	<tr>
 	<td><h1 id = "m"> </h1></td>
-	<td><h1 id = "mes"> </h1></td>
+		<td><h1>Local: 	</h1></td><td colspan = 3><h2 id ='local'></h2></td>      
+		<td><h1>Temp: 	</h1></td><td colspan = 3><h2 id ='temperatura'></h2></td>  
+		<td><h1>Data: 	</h1></td><td><h2 id ='dia'></h2><td><h2 id ='mes'></h2></td><td><h2 id ='ano'></h2> </td>
 </tr>
 </table>
 </form>
 	
 <h3>
 	<table>
-		<tr><th colspan = 4>TEMPERATURAS </th></tr>
-		<tr><td><h1>Local: 	</h1></td><td colspan = 3><h2 id ='local'></h2></td></tr>       
-		<tr><td><h1>Temp: 	</h1></td><td colspan = 3><h2 id ='temperatura'></h2></td></tr>   
-		<tr><td><h1>Data: 	</h1></td><td><h2 id ='dia'></h2><td><h2 id ='mes'></h2></td><td><h2 id ='ano'></h2> </td></tr>
+		
+		
 	</table>
 	</h3>
 	<br>
