--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ google.charts.setOnLoadCallback(draw_table);
 		<div class="home_btn">
 			<form name="home" action="/" method="get">
                 <a  href="autentica.html">
-			    <img name="gear" src="imagens/blue/gear_btn.png"  ALT=""></a>
+			    <img name="gear" src="imagens/blue/gear_btn.png" height="50px" whidth="50px" ALT=""></a>
 			</form>
 		</div>
 		
@@ -53,6 +53,24 @@ google.charts.setOnLoadCallback(draw_table);
 </section>
 	
 <section class="chart">
+	<form action="">
+	<select name="grafico" id="grafico">
+		<option value="janeiro">Janeiro</option>
+		<option value="fevereiro">Fevereiro</option>
+		<option value="março">Março</option>
+		<option value="abril">Abril</option>
+		<option value="maio">Maio</option>
+		<option value="junho">Junho</option>
+		<option value="julho">Julho</option>
+		<option value="agosto">Agosto</option>
+		<option value="setembro">Setembro</option>
+		<option value="outubro">Outubro</option>
+		<option value="novembro">Novembro</option>
+		<option value="Dezembro">Dezembro</option>
+
+
+	</select>
+</form>
 	<div class="chart_1">
 		<div id='graph_dia'></div>
 	</div>
