--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -23,7 +23,7 @@ google.charts.setOnLoadCallback(draw_table);
 		  <img id="logo_toi" src = "imagens/blue/logo_toi.png" >
         </div>
 		<div class="home_btn">
-			<form name="home" action="/" method="get">
+			<form name="home" action="/src/pages" method="get">
                 <a  href="autentica.html">
 			    <img name="gear" src="imagens/blue/gear_btn.png" height="50px" whidth="50px" ALT=""></a>
 			</form>
