--- a/src/pages/Grafico.html
+++ b/src/pages/Grafico.html
@@ -25,6 +25,7 @@ google.charts.setOnLoadCallback(draw_table);
     <div class="botao_home">
 	    <form name="home" action="/" method="get">
             <div class="home_btn">
+            <a  href="/src/pages/index.html">
 		    <input type="image" src="imagens/blue/home_btn.png" onClick="this.form.submit()">
             </div>
 	    </form>
