--- a/src/pages/Monitor.html
+++ b/src/pages/Monitor.html
@@ -158,8 +158,8 @@ async function getContent() {
 						mode: 'cors',
 						cache: 'default'
 						}
-		fetch(`https://server-orpin-zeta.vercel.app/temps`)
-		//fetch('http://127.0.0.1:8081/temps')
+		//fetch(`https://server-orpin-zeta.vercel.app/temps`)
+		fetch('http://127.0.0.1:8081/temps')
 		//fetch('http://127.0.0.1:5500/temps')
 		.then(function (response){
 			return response.text()})
@@ -204,7 +204,8 @@ async function getContent() {
 async function cad_new_temp(){
 
 const options = {method: 'GET',	mode: 'cors',cache: 'default'}
-fetch('https://server-orpin-zeta.vercel.app/mqtt')
+//fetch('https://server-orpin-zeta.vercel.app/mqtt')
+fetch('http://127.0.0.1:8081/temps')
 .then(function (response){
 return response.text()})
 .then(data=>{
@@ -224,8 +225,8 @@ const dados = {
 	"ano": parseInt(myObj.vm.ano)
 	}
 
-//const response = await fetch('http://127.0.0.1:8081/temps')
-const response = fetch(`https://server-orpin-zeta.vercel.app/temps`,{
+const response = fetch('http://127.0.0.1:8081/temps',{
+//const response = fetch(`https://server-orpin-zeta.vercel.app/temps`,{
 method: 'POST',	mode: 'cors',
 headers: { "Content-type": 'application/json'},
 body: JSON.stringify(dados)
@@ -250,7 +251,8 @@ console.log('Ocorreu um erro no servidor \n Erro: '+ err);
 async function list_temp(){
 	//Obtem dados do banco de dados
 		const options = {method: 'GET',	mode: 'cors',cache: 'default'}
-		fetch(`https://server-orpin-zeta.vercel.app/temps`)
+		fetch('http://127.0.0.1:8081/temps')
+		//fetch(`https://server-orpin-zeta.vercel.app/temps`)
 		.then(function (response){
 			return response.text()})
 		.then(data=>{
