--- a/src/pages/mqtt.html
+++ b/src/pages/mqtt.html
@@ -192,9 +192,9 @@ fs.writeFile('myfile.txt', 'Hello content!', function (err) {
 
 async function mqtt_show() {
 	const options = {method: 'GET',	mode: 'cors',cache: 'default'}
-	const response =fetch(`https://server-orpin-zeta.vercel.app/mqtt`)
+	//const response =fetch(`https://server-orpin-zeta.vercel.app/mqtt`)
 	//const response =fetch(URI)
-	//const response = fetch('http://127.0.0.1:8081/mqtt')
+	const response = fetch('http://127.0.0.1:8081/mqtt')
 	.then(function (response){
 	return response.text()})
 	.then(data=>{
