--- a/src/pages/Grafico.html
+++ b/src/pages/Grafico.html
@@ -3,10 +3,10 @@
 <head> 
 <meta charset="UTF-8">
 <title>Grafico</title>
-<link rel="stylesheet" type="text/css" href="css/css.css" />
-<link rel="stylesheet" type="text/css" href="css/reset.css" />
+<link rel="stylesheet" type="text/css" href="../../css/css.css" />
+<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="grafico.js"></script>
+<script src="../../grafico.js"></script>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script>
 google.charts.load('current',{packages:['corechart']});
@@ -26,18 +26,18 @@ google.charts.setOnLoadCallback(draw_table);
 	    <form name="home" action="/" method="get">
             <div class="home_btn">
             <a  href="/src/pages/index.html">
-		    <input type="image" src="imagens/blue/home_btn.png" onClick="this.form.submit()">
+		    <input type="image" src="../../imagens/blue/home_btn.png" onClick="this.form.submit()">
             </div>
 	    </form>
     </div>
 </div>
-<img id = "fio" src = "imagens/blue/fio azul.png" >
+<img id = "fio" src = "../../imagens/blue/fio azul.png" >
 </section>
 
 <section class="Botoes_pagina0">
      <div class="Botoes__pagina0">
         <form name="apaga" action="#" method="get">
-            <input type="image" src = "/imagens/blue/graph_btn.png" onClick="Dia()">
+            <input type="image" src = "../../imagens/blue/graph_btn.png" onClick="Dia()">
             <label>Dia</label>
         </form>
             <label>Mês</label>
