--- a/src/pages/cad_user.html
+++ b/src/pages/cad_user.html
@@ -2,9 +2,9 @@
 <html>
     <head>
     <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="css/css.css" />
-        <link rel="stylesheet" type="text/css" href="css/reset.css" />
-        <script src="user.js"></script>
+        <link rel="stylesheet" type="text/css" href="../../css/css.css" />
+        <link rel="stylesheet" type="text/css" href="../../css/reset.css" />
+        <script src="../../user.js"></script>
 
 <title>Cadastro de usuarios</title> 
 </head>
@@ -16,13 +16,13 @@
     <div class="botao_home">
         <form name="home" action="/" method="get">
             <div class="home_btn">
-            <input type="image" src="imagens/blue/home_btn.png" onClick="this.form.submit()">
+            <input type="image" src="src/pages/imagens/blue/home_btn.png" onClick="this.form.submit()">
             </div>
         </form>
     </div>
 </div>
 </div>
-<img id = "fio" src = "imagens/blue/fio azul.png" >
+<img id = "fio" src = "src/pages/imagens/blue/fio azul.png" >
 </section>
 
 <div class = "cad">
