--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" type="text/css" href="css/css.css" />
-<link rel="stylesheet" type="text/css" href="css/reset.css" />
+<link rel="stylesheet" type="text/css" href="../../css/css.css" />
+<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 <link rel="preconnect" href="https://fonts.googleapis.com" />
-<script src="grafico.js"></script>
-<script src="index.js"></script>
+<script src="../../grafico.js"></script>
+<script src="../../index.js"></script>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script>
 google.charts.load('current',{packages:['corechart']});
