--- a/src/pages/autentica.html
+++ b/src/pages/autentica.html
@@ -2,9 +2,9 @@
 <head>
 	
 <meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="../../css/css.css" />
-	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
-	<script src="../../user.js"></script>
+	<link rel="stylesheet" type="text/css" href="/css/css.css" />
+	<link rel="stylesheet" type="text/css" href="/css/reset.css" />
+	<script src="/user.js"></script>
 <title>Cadastro de usuarios</title> 
 </head>
 <body >
@@ -15,12 +15,12 @@
 <div class="botao_home">
 	<form name="home" action="/" method="get">
 		<div class="home_btn">
-		<input type="image" src="../../imagens/blue/home_btn.png" onClick="this.form.submit()">
+		<input type="image" src="/imagens/blue/home_btn.png" onClick="this.form.submit()">
 		</div>
 	</form>
 </div>
 </div>
-<img id = "fio" src = "../../imagens/blue/fio azul.png" >
+<img id = "fio" src = "/imagens/blue/fio azul.png" >
 </section>
 
 <div class = autenticacao >
@@ -30,7 +30,7 @@
 <form action="/login" method = "post">
 	<p></p><label>Login</label></p>	<br>
 
-	<img name="user" src="../../imagens/blue/user.png" ALT=""></a><br>	<br>
+	<img name="user" src="/imagens/blue/user.png" ALT=""></a><br>	<br>
 	
 	<input type="nome"  	placeholder="Usuario"	id = "nome" name = "nome" 	size="12" ><br><br>
 	<input type="password"  placeholder = "Senha" 	id =  "senha" name = "senha0" size="12" > <br>  <br>
