--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" type="text/css" href="../../css/css.css" />
-<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
+<link rel="stylesheet" type="text/css" href="/css/css.css" />
+<link rel="stylesheet" type="text/css" href="/css/reset.css" />
 <link rel="preconnect" href="https://fonts.googleapis.com" />
-<script src="../../grafico.js"></script>
-<script src="../../index.js"></script>
+<script src="/grafico.js"></script>
+<script src="/index.js"></script>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script>
 google.charts.load('current',{packages:['corechart']});
@@ -19,35 +19,35 @@ google.charts.setOnLoadCallback(draw_table);
 	
     <div class="container">
         <div class="botao_home">
-		  <img id = "logo" src = "../../imagens/blue/logo.png" >
-		  <img id="logo_toi" src = "../../imagens/blue/logo_toi.png" >
+		  <img id = "logo" src = "/imagens/blue/logo.png" >
+		  <img id="logo_toi" src = "/imagens/blue/logo_toi.png" >
         </div>
 		<div class="home_btn">
 			<form name="home" action="/src/pages" method="get">
                 <a  href="autentica.html">
-			    <img name="gear" src="../../imagens/blue/gear_btn.png" height="50px" whidth="50px" ALT=""></a>
+			    <img name="gear" src="/imagens/blue/gear_btn.png" height="50px" whidth="50px" ALT=""></a>
 			</form>
 		</div>
 		
 	</div>
-	<img id = "fio" src = "../../imagens/blue/fio azul.png" >
+
 </section>
 
 <section class=" Botoes_pagina0">
     <div class= "Botoes__pagina0">
 		<div class=" w_box">
 		<a  href="mqtt.html">
-		<img src="../../imagens/blue/raio_btn.png"  ALT=""></a>
+		<img src="/imagens/blue/raio_btn.png"  ALT=""></a>
 		<label>Energy</label>
 		</div>
 		<div class=" w_box">
 	    <a  href="Grafico.html">
-		<img src="../../imagens/blue/graph_btn.png"  ALT=""></a>
+		<img src="/imagens/blue/graph_btn.png"  ALT=""></a>
 		<label>Graphics</label>
 		</div>
 		<div class=" w_box">
 	    <a href="Monitor.html">
-	    <img src="../../imagens/blue/temp_btn.png"  ALT=""></a>
+	    <img src="/imagens/blue/temp_btn.png"  ALT=""></a>
 		<label>Temperature</label>
   		 </div>
     </div>
