--- a/pages/autentica.html
+++ b/pages/autentica.html
@@ -55,7 +55,7 @@ async function autentica() {
 		
 	};
 	
-		fetch('http://127.0.0.1:8081/login',dados_envio)
+		fetch('https://repo1-iota.vercel.app/login',dados_envio)
 		.then(response=>response.json())
 		.then(response =>{
 			console.log(response)
